--- a/java-mvc-capas-axios/frontend-react/src/components/admin/PerfilAdmin.css
+++ b/java-mvc-capas-axios/frontend-react/src/components/admin/PerfilAdmin.css
@@ -58,6 +58,11 @@
   z-index: 999;
 }
 
+.navbar-spacer {
+  height: 160px;
+  width: 100%;
+}
+
 .tab {
   padding: 0.75rem 1.5rem;
   text-decoration: none;
@@ -83,13 +88,7 @@
   padding: 0;
 }
 
-.gestion-menu {
-  max-width: 100%;
-  margin: 0;
-  padding: 2rem;
-  padding-top: calc(2rem + 160px);
-}
-
+.gestion-menu,
 .gestion-pedidos,
 .gestion-usuarios,
 .reportes {
